--- a/unDockerized.yml
+++ b/unDockerized.yml
@@ -1,13 +1,19 @@
 ---
 - name:  Install composer
   shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer
+
 - name:  Install package dependencies
-  shell: apt-get update && apt-get install -y \
+  shell: apt-get update && apt-get install -y zlib1g zlib1g-dev git libmcrypt-dev libxml2-dev libgmp-dev libpcre3-dev php-apc libicu-dev
+
 - name: apc is only available in a PECL install so yea
-  shell: pecl install apcu-4.0.11 \
+  shell: pecl install apcu-4.0.11 && echo extension=apcu.so > /usr/local/etc/php/conf.d/docker-php-ext-apcu.ini
+
 - name:  docker-ext-install isn't checking 64bit lib dir for this...
   shell: ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h
+
 - name: Run Command
-  shell: docker-php-ext-install \
+  shell: docker-php-ext-install mysql zip mcrypt soap mysqli gettext gmp sockets intl
+
 - name:    > Set remote_connect_back=0 below
-  shell: pecl install xdebug && \
+  shell: pecl install xdebug && echo "zend_extension = "`echo "<?php print ini_get('extension_dir');" |php`"/xdebug.so" >> /usr/local/etc/php/php.ini
+
